--- a/src/app/creation/creation.component.css
+++ b/src/app/creation/creation.component.css
@@ -1,23 +1,20 @@
 :host {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-.header{
-  text-align: center;
-}
-.task-list {
   display: flex;
-  flex-flow: row wrap;
+  align-items: center;
   justify-content: center;
 }
-.to-do-container {
+.form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 5px;
 }
 .button {
   width: 100px;
   border: 2px solid black;
   border-radius: 10px;
+}
+.input {
+  border: 2px solid black;
+  margin: 5px;
 }
